--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
         <div class="post">
             <h3 class="user">@<%= post.user %></h3>
             <h4 class="pur"><%= post.purpose %></h4>
-             <a href="http://localhost:8080/posts/<%= post.id %>">Show in Details</a>
-             <a href="http://localhost:8080/posts/<%= post.id %>/edit">Edit</a><br><br>
+             <a href="/posts/<%= post.id %>">Show in Details</a>
+             <a href="/posts/<%= post.id %>/edit">Edit</a><br><br>
              <form method="post" action="posts/<%=post.id%>?_method=DELETE">
                 <button>Delete</button>
              </form>
@@ -21,6 +21,6 @@
          
    <% } %>
    <br>
-   <a href="http://localhost:8080/posts/new">Create new post</a>
+   <a href="/posts/new">Create new post</a>
 </body>
 </html>
