--- a/views/show.ejs
+++ b/views/show.ejs
@@ -16,7 +16,7 @@
             <div class="post">
                 <h3 class="user">@<%= post.user %></h3>
                 <h4 class="pur"><%= post.purpose %></h4>
-                <a href="http://localhost:8080/posts">Hide Details</a>
+                <a href="/posts">Hide Details</a>
             </div>
             <%} %>
                 <%} %> 
